--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #614258;
+    background-color: #424E61;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -27,7 +27,7 @@
 }
 
 .escola{
-    background-image: linear-gradient(#614258,#b816f8);
+    background-image: linear-gradient(#424E61,#f816ed);
     color:white;
     display: flex;
     justify-content: center;
