--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color: #524261;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -27,7 +27,7 @@
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#f816ed);
+    background-image: linear-gradient(#524261,#cb16f8);
     color:white;
     display: flex;
     justify-content: center;
