--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 .escola{
-    background-image: linear-gradient(#524261,#cb16f8);
+    background-image: linear-gradient(#524261,#c316f8);
     color:white;
     display: flex;
     justify-content: center;
