--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #524261;
+    background-color: #327355;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -27,7 +27,7 @@
 }
 
 .escola{
-    background-image: linear-gradient(#524261,#c316f8);
+    background-image: linear-gradient(#327355,#5C8C46);
     color:white;
     display: flex;
     justify-content: center;
