--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #327355;
+    background-color: #424E61;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -24,12 +24,17 @@ body {
     font-size: 16px;
 }
 
+.cabecalho-lista-item a{
+    text-decoration: none; 
+    color: white;
+}
+
 .escola-imagem{
     width: 25%;
 }
 
-.escola{
-    background-image: linear-gradient(#327355,#5C8C46);
+#escola{
+    background-image: linear-gradient(#424E61,#16CFF8);
     color:white;
     display: flex;
     justify-content: center;
@@ -46,9 +51,11 @@ body {
     padding: 24px 0;
 }
 
-.estudante{
+#estudante{
     padding: 24px 0;
 }
+
+
 .estudante-imagem{
     width: 120px;
 }
