--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 #escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#4D9147,#34E624);
     color:white;
     display: flex;
     justify-content: center;
@@ -94,6 +94,6 @@ body {
 
 .rodape-div{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
