--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 
 .rodape-imagem{
     height: 120px;
-    padding: 24px 0;
+    padding: 12px 0;
    
 }
 
@@ -96,5 +96,5 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    margin: 5;
 }
