--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ body {
 
 .rodape-div{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    margin: 5;
 }
+
+
