--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .prof_dulce{
-    background-image: linear-gradient(#8F0E0A,#e62424);
+    background-image: linear-gradient(#e62424,#8F0E0A);
     color:white;
     display: flex;
     justify-content: center;
