--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ body {
     padding: 15px;
 }
 
+.prof_dulce-img{
+    width: 25%;
+    padding: 15px;
+}
+
 .prof_dulce-titulo{
     padding: 24px 25%;
 }
