--- a/style.css
+++ b/style.css
@@ -54,8 +54,17 @@ body {
     padding: 24px 25%;
 }
 
+.meio{
+    background-color: #e62424;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+}
+
 .PDulce-imagem{
-    width: 35%;
+    width: 25%;
     padding: 15px;
 }
 
