--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
 .meio{
     background-color: #e62424;
     color:white;
+    text-decoration: cyan;
     display: flex;
     justify-content: center;
     align-items: center;
