--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ body {
     padding: 24px;
 }
 
+.meio-titulo{
+    padding: 24px 25%;
+
+}
+
 .PDulce-imagem{
     width: 25%;
     padding: 15px;
