--- a/style.css
+++ b/style.css
@@ -57,16 +57,21 @@ body {
 .meio{
     background-color: #e62424;
     color:white;
-    text-decoration: none;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     padding: 24px;
 }
 
 .meio-titulo{
-    padding: 24px 25%;
+    padding: 2px 25%;
 
+}
+
+.meio-texto{
+    width: 20%;
+    text-decoration: none; 
+    color: white;
 }
 
 .PDulce-imagem{
