--- a/style.css
+++ b/style.css
@@ -58,19 +58,9 @@ body {
     background-color: #e62424;
     color:white;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 24px;
-}
-
-.meio-titulo {
-    padding: 2px 25%;
-
-}
-
-.meio-texto a{
-    text-decoration: none; 
-    color: cyan;
+    justify-content: center;
+    padding: 24px 0;
 }
 
 .PDulce-imagem{
