--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 
 .estudante-todos{
     display: grid;
-    grid-template-columns: 25% 25% 25% 25% 25%;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 
 .rodape{
