--- a/style.css
+++ b/style.css
@@ -68,7 +68,9 @@ body {
 }
 
 .PDulce-imagem{
-    width: 25%;
+    border-radius: 8%;
+    border: #8F0E0A;
+    width: 20%;
     padding: 15px;
 }
 
