--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 .escola-imagem{
     border-radius: 8%;
-    border: solid(#8F0E0A);
+    border: 5px solid(#8F0E0A);
     width: 35%;
     padding: 15px;
 }
