--- a/style.css
+++ b/style.css
@@ -139,3 +139,12 @@ body {
     padding: 6px 0;
     width: 50%;
 }
+
+.rodape-div-todos{
+    width: 20%;
+}
+
+.rodape-div-iten{
+    margin: 15px;
+
+}
