--- a/style.css
+++ b/style.css
@@ -141,11 +141,11 @@ body {
 }
 
 .rodape-div-todos{
-    display: flex;
-    justify-content: space-around;
+
 }
 
 .rodape-div-item{
+    width: 5%;
     margin: 15px;
-
+    border-radius: 50%;
 }
