--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
     color: white;
     text-align: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
