--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body {
     background-color: #8F0E0A;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 5px 100px;
+}
+.cabecalho-div{
+    display: flex;
+    justify-content: space-between;
 }
 
 .cabecalho-imagem{
