--- a/style.css
+++ b/style.css
@@ -151,11 +151,18 @@ body {
     align-items: center;
 }
 
+
+
 .rodape-imagem{
     margin: 15px;
     padding: 15px;
     width: 50%;
     border-right: 3px solid #fff;
+}
+
+.rodape-parana{
+    display: flex;
+    flex-direction: column;
 }
 
 .rodape-div-redesS{
