--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body {
 }
 
 .rodape-voutar a:hover{
-    text-decoration: overline;
+    text-decoration: underline;
     color: rgb(192, 192, 192);
 }
 
