--- a/style.css
+++ b/style.css
@@ -45,39 +45,38 @@ body {
 
 }
 
-        /* Estilo para o contêiner */
         .imagem-container {
-            position: relative; /* Para que possamos posicionar os botões relativos a este contêiner */
-            display: inline-block; /* Para que o contêiner não ocupe toda a largura disponível */
+            position: relative;
+            display: inline-block;
         }
 
-        /* Estilo para as imagens */
+
         #imagem {
-            width: 500px; /* Largura desejada */
+            width: 400px;
             border-radius: 8%;
             border: 15px solid #720b08;
-            height: auto; /* Altura automática para manter a proporção */
+            height: auto;
         }
 
-        /* Estilo para os botões */
+
         .botoes-container {
-            position: absolute; /* Para que possamos posicionar os botões absolutamente dentro do contêiner */
-            bottom: 0; /* Coloca os botões na parte inferior do contêiner */
-            left: 0; /* Coloca os botões à esquerda do contêiner */
-            width: 100%; /* Faz com que os botões ocupem toda a largura do contêiner */
-            text-align: center; /* Centraliza os botões horizontalmente */
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            text-align: center;
         }
 
         .botoes-container button {
-            margin: 5px; /* Espaçamento entre os botões */
+            margin: 5px;
         }
 
         .botoes-container button:first-child {
-            float: left; /* Alinha o primeiro botão à esquerda */
+            float: left;
         }
 
         .botoes-container button:last-child {
-            float: right; /* Alinha o último botão à direita */
+            float: right;
         }
 
 
